fix background image not showing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 body {
     background-color: black;
-    background: url(/assets/images/Train\ background.jpg) no-repeat center center fixed;
+    background: url(/assets/images/trainbackground.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
        -o-background-size: cover;
